[package]
name = 'jlink-rtx-plugin'
version = '1.0.0'
authors = ['Tal Risin <risint96@gmail.com>']
edition = '2018'

[dependencies]
pkg-version = '1.0.0'
log = '0.4.8'
ifmt = '0.3.0'
memchr = '2.3.3'
chrono = '0.4.11'
num-traits = '0.2'
num-derive = '0.3'
hex = '0.4.2'
byteorder = '1.3.4'

[build-dependencies]
bindgen = '0.53.2'

[lib]
name = 'rtx_plugin'
crate-type = ['dylib']
