[package]
name = 'jlink-rtx-plugin'
version = '1.0.0'
authors = ['Tal Risin <risint96@gmail.com>']
edition = '2018'

[dependencies]
ifmt = '0.3.0'
memchr = '2.3.3'
chrono = '0.4.11'
num-traits = '0.2'
num-derive = '0.3'
hex = '0.4.2'
byteorder = '1.3.4'

[dependencies.log]
version = '0.4.8'
features = ['std']

[lib]
name = 'rtx_plugin'
crate-type = ['dylib']
