[package]
name = 'jlink-rtos-plugin-rtx'
version = '1.0.1'
authors = ['Tal Risin <risint96@gmail.com>']
edition = '2018'
description = 'RTX RTOS thread awareness plugin for the J-Link GDB Server'
readme = 'README.md'
repository = 'https://github.com/RisinT96/jlink-rtos-plugin-rtx/'
license = 'MIT'
keywords = [
    'RTX',
    'RTOS',
    'JLink',
    'J-Link',
    'GDB',
]
categories = ['embedded']
publish = false

[lib]
name = 'RTOSPlugin_RTX'
crate-type = ['dylib']

[dependencies]
ifmt = '0.3.0'
memchr = '2.3.3'
chrono = '0.4.11'
num-traits = '0.2'
num-derive = '0.3'
hex = '0.4.2'
byteorder = '1.3.4'

[dependencies.log]
version = '0.4.8'
features = ['std']

[profile.release]
lto = true
panic = 'abort'
